@@ -231,6 +231,8 @@ because of Phabricator reports.
 * WatchedItem::getLinkTarget(), deprecated in 1.36, has been removed. Instead,
   use ::getTarget() (and cast if needed).
 * The AddNewAccount hook, deprecated in 1.27, has been dropped.
+* wfMatchesDomainsList(), deprecated in 1.39, has been removed. Instead, use
+  UrlUtils::matchesDomainList().
 * …
 
 === Deprecations in 1.46 ===
